<resources>
    <string name="app_name">記帳小助手</string>
    <string-array name="fixDay">
        <item>每天</item>
        <item>每周</item>
        <item>每月</item>
        <item>每年</item>
    </string-array>

    <string-array name="searchScope">
        <item>全部</item>
        <item>收入</item>
        <item>支出</item>
        <item>資產</item>
        <item>目標</item>
    </string-array>


    <string name="text_Open">open</string>
    <string name="text_Close">close</string>
    <string name="text_Property">資產管理</string>
    <string name="text_Com">記一筆</string>
    <string name="text_QRcode">多筆QR Code掃描</string>
    <string name="text_Ele">雲端發票</string>
    <string name="text_Price">發票對獎</string>
    <string name="text_DataPicture">資料(圖表)</string>
    <string name="text_DataList">資料(列表)</string>
    <string name="text_Goal">目標</string>
    <string name="text_Search">搜尋</string>
    <string name="text_Setting">設定</string>
    <string name="text_SetCarrier">綁定/取消載具</string>
    <string name="text_ShowCal">顯示手機載具</string>
    <string name="text_DonateMain">捐獻發票</string>
    <string name="text_NewCarrier">申請手機載具</string>
    <string name="text_EleBank">修改匯款帳戶</string>
    <string name="text_HowGet">如何領獎?</string>
    <string name="text_HowSetC">悠遊卡如何載具歸戶?</string>
    <string name="text_EleWhat">雲端發票是什麼?</string>
    <string name="text_Home">首頁</string>
    <string name="string_export">支出</string>
    <string name="string_import">收入</string>

    <string name="text_Teach">教學影片</string>
    <string name="text_AddCarrier">載具歸戶</string>
    <string name="text_update">修改</string>
    <string name="text_manager">管理</string>
    <string name="text_delete">刪除</string>
    <string name="text_show">檢視</string>

    <string name="text_autoSetting">種類 : 自動</string>

    <string name="insert_success">新增成功!</string>
    <string name="update_success">修改成功!</string>

    <string name="property_list">列表</string>
    <string name="property_new">新增</string>


    <string name="error_Zero">數值不能為0!</string>
    <string name="error_Integer">不是數值!</string>
    <string name="error_negative_Integer">不能為負值!</string>
    <string name="error_overMoney">超過金額上限!</string>
    <string name="error_lostData">資料遺失!</string>
    <string name="error_noHaveData">請新增資料!</string>
    <string name="error_noScanData">請掃描QRcode!</string>
    <string name="mainType">主項目種類</string>
    <string name="secondType">次要項目種類</string>
    <string name="DropboxKey">0i5wzgjn086a41v</string>
    <string name="mainDropboxKey">db-0i5wzgjn086a41v</string>
</resources>
